--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --watch",
-    "server": "webpack-dev-server --open",
+    "start": "webpack-dev-server --open",
     "lint:js": "eslint",
     "lint:css": "stylelint **/*.{css,scss}"
   },
