--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@popperjs/core": "^2.4.4",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "webpack-dev-server": "^3.11.0"
   }
 }
